--- a/express/blocks/download-screens/download-screens.css
+++ b/express/blocks/download-screens/download-screens.css
@@ -1,3 +1,8 @@
+:root {
+  --dark-bg-color: #000B1D;
+  --header-height: 63px;
+}
+
 /* cards block styles - removing is ok, do not modify */
 main .section.cards-container {
   background-color: #F1F3F4;
@@ -173,6 +178,11 @@ main .cards.large .card .card-content li {
 }
 
 /* extension - modifications are ok */
+main .section.dark.download-screens-container {
+  background-color: var(--dark-bg-color);
+  color: white;
+}
+
 main .download-screens-wrapper.scroll {
   max-width: 100vw;
   width: 100vw;
